apps/sonarqube/network-policies/network-policy-backup.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backup-policy
  namespace: sonarqube
spec:
  podSelector:
    matchLabels:
      app: sonarqube-db-backup
  policyTypes:
    - Egress
  egress:
    # PostgreSQL local
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: sonarqube
          podSelector:
            matchLabels:
              app.kubernetes.io/name: postgresql
              app.kubernetes.io/component: primary
      ports:
        - protocol: TCP
          port: 5432

    # CoreDNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
