apps/sonarqube/network-policies/network-policy-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-policy
  namespace: sonarqube
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
  ingress:
    # Trafic entrant depuis le serveur SonarQube
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: sonarqube
          podSelector:
            matchLabels:
              app: sonarqube
      ports:
        - protocol: TCP
          port: 5432
    # Trafic entrant depuis le CronJob de sauvegarde
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: sonarqube
          podSelector:
            matchLabels:
              app: sonarqube-db-backup
      ports:
        - protocol: TCP
          port: 5432
